# pf_labs

lab1/: hello  hello.cpp
lab2/: sum_n  sum_n.cpp  taylor  taylor.cpp
lab3/: regression  regression.cpp
lab4/: regression.test.cpp
slides/: 2double1char  2double1char.cpp  arrayfromfunction.cpp  complex  complex+template  complex+template.cpp  complex.cpp  evennumber?  evennumber?.cpp  gcdfunction  gcdfunction.cpp  integersquareroot  integersquareroot.cpp  intsqrtfor  intsqrtfor.cpp  lcmfunction  lcmfunction.cpp  lessminimal  lessminimal.cpp  multiplyvectorelements  multiplyvectorelements.cpp  nrandomgeneration  nrandomgeneration.cpp  powfunction  powfunction.cpp  primefunction  primefunction.cpp  rationaltemplate.cpp  smallest3numbers  smallest3numbers.cpp  smallestNnumbers  smallestNnumbers.cpp  smallesttwonumbers  smallesttwonumbers.cpp  sumtwonumbers  sumtwonumbers.cpp  trasformainminuscolo  trasformainminuscolo.cpp
slides/nrangen_mean_std/: CMakeLists.txt  main.cpp  nrangen_mean_std.cpp  nrangen_mean_std.hpp  nrangen_mean_std.test.cpp
